[package]
name = "burger"
version = "0.1.0"
edition = "2021"

[features]
compat = ["dep:tower-service"]

[dependencies]
futures-util = "0.3.29"
indexmap = "2.1.0"
tokio = { version = "1.35.0", features = ["sync"] }
tower-service = { version = "0.3.2", optional = true }
tracing = "0.1.40"

[dev-dependencies]
rand = "0.8.5"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread", "time"] }
tower = { version = "0.4.13", features = ["util"] }
tracing-subscriber = "0.3.18"
