[package]
name = "burger"
version = "0.1.0-rc.1"
edition = "2021"
description = "An experimental service framework."
license = "MIT"
homepage = "https://github.com/hlbarber/burger"
repository = "https://github.com/hlbarber/burger"

[features]
compat = ["dep:tower"]

[dependencies]
futures-util = "0.3.30"
indexmap = "2.2.6"
tokio = { version = "1.37.0", features = ["macros", "sync", "time"] }
tokio-stream = "0.1.15"
tower = { version = "0.4.13", features = ["load"], optional = true }
tracing = "0.1.40"

[dev-dependencies]
futures = "0.3.30"
http = "1.1.0"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "time"] }
tower = { version = "0.4.13", features = ["util"] }
tracing-subscriber = "0.3.18"
